crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@114.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE pagg_tab_para_p1 PARTITION OF pagg_tab_para FOR VALUES FROM (0) TO (12);
---
CreateStmt@0..85
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..29
    Ident@13..29 "pagg_tab_para_p1"
  Whitespace@29..30 " "
  Partition@30..39 "PARTITION"
  Whitespace@39..40 " "
  Of@40..42 "OF"
  Whitespace@42..43 " "
  RangeVar@43..56
    Ident@43..56 "pagg_tab_para"
  Whitespace@56..57 " "
  For@57..60 "FOR"
  Whitespace@60..61 " "
  Values@61..67 "VALUES"
  Whitespace@67..68 " "
  PartitionBoundSpec@68..83
    From@68..72 "FROM"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    AConst@74..75
      Iconst@74..75 "0"
    Ascii41@75..76 ")"
    Whitespace@76..77 " "
    To@77..79 "TO"
    Whitespace@79..80 " "
    Ascii40@80..81 "("
    AConst@81..83
      Iconst@81..83 "12"
  Ascii41@83..84 ")"
  Ascii59@84..85 ";"

