crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@115.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE pagg_tab_para_p2 PARTITION OF pagg_tab_para FOR VALUES FROM (12) TO (22);
---
CreateStmt@0..86
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..29
    Ident@13..29 "pagg_tab_para_p2"
  Whitespace@29..30 " "
  Partition@30..39 "PARTITION"
  Whitespace@39..40 " "
  Of@40..42 "OF"
  Whitespace@42..43 " "
  RangeVar@43..56
    Ident@43..56 "pagg_tab_para"
  Whitespace@56..57 " "
  For@57..60 "FOR"
  Whitespace@60..61 " "
  Values@61..67 "VALUES"
  Whitespace@67..68 " "
  PartitionBoundSpec@68..84
    From@68..72 "FROM"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    AConst@74..76
      Iconst@74..76 "12"
    Ascii41@76..77 ")"
    Whitespace@77..78 " "
    To@78..80 "TO"
    Whitespace@80..81 " "
    Ascii40@81..82 "("
    AConst@82..84
      Iconst@82..84 "22"
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

